fix(cxl-ui): cxl-app-layout -> prevent any horizontal overflow or scrolling

--- a/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
+++ b/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
@@ -11,6 +11,8 @@ $toggle-icon: "lumo:angle-right";
  */
 :host {
   display: block;
+  /* Prevent any horizontal overflowing/scrolling within app-layout */
+  overflow: hidden;
 
   aside,
   main {
